samples/_failures_safe/1761537890_69747b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f0d17dd.c: In function ‘main’:
./samples/SAFE/__tmp_9f0d17dd.c:189:20: error: missing terminating " character
  189 |             printf("Invalid event input. Please try again.\
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_9f0d17dd.c:189:13: error: expected expression at end of input
  189 |             printf("Invalid event input. Please try again.\
      |             ^~~~~~
./samples/SAFE/__tmp_9f0d17dd.c:189:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f0d17dd.c:189:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f0d17dd.c:189:13: error: expected declaration or statement at end of input
